css/style.css
/* ... */
#about h4, #sponsors h4{
    font-size: 25px;
    text-transform: uppercase;
    color: #009AD7;
    font-weight: 700;
    padding-bottom:15px;
    letter-spacing: 1px;
}

#about p, #sponsors p{
    color: #000000;
    font-weight: 500;
    font-size: 17px;
}

.full-page-content{
    padding-top:150px;
    padding-bottom:150px;
}

.content{
    padding-top:10%;
    padding-bottom:10%;
}

/* Program */

#speakers, #program {
    width: 100%;
    font-family: 'DecimaLight';
    background: #0f2e51;
    text-align: justify;
}

#program h3 {
    color: white;
}

#faq .panel-heading {
    cursor: pointer;
}

#faq .faq-toggle.collapsed::before {
    content: "+";
    -webkit-transition: 0.5s linear ease-out;
    transition: 0.5s linear ease-out;
    position: absolute;
    left: 15px;
}

#faq h3{
    color: #009AD7;
}


#faq .faq-toggle::before {
    position: absolute;
    left: 15px;
    -webkit-transition: 0.5s linear ease-out;
    transition: 0.5s linear ease-out;
    content: "-";
}

#faq .panel-heading {
    margin-top: 15px;
}

#faq .panel-default > .panel-heading {
    color: #FFF;
    background-color: #1399D6;
    border-color: #000;
    border-radius: 0;
    padding: 0;
}

#faq .panel-default > .panel-heading a {
    position: relative;
    display: block;
    text-decoration: none;
    padding: 15px 15px 15px 35px;
    color:white;
    font-size: 17px;
    font-weight: 600;
}

#faq .panel-default .panel-title{
    margin-bottom:0;
}

#faq .panel-default .panel-body {
    background-color: #f7f7f7;
    border-color: rgba(0, 0, 0, 0.06);
    border-radius: 0;
    color:black;
    font-size: 16px;
    border-style: solid;
    border-top-style: none;
    border-left-width:1px;
    border-bottom-width:1px;
    border-right-width: 1px;
    padding: 20px;
}

#faq h4{

    color: #1399D6;
    font-size: 18px;
   font-weight: 600;
}

#faq h4:not(:first-child){
    margin-top: 15px;
}

#faq p{
    margin-bottom: 0;
}

/* Location */

#location {
    width: 100%;
    font-family: 'DecimaLight';
    background: #0f2e51;
    text-align: justify;
}

#map  {
    height: 400px;  /* The height is 400 pixels */
    width: 100%;  /* The width is the width of the web page */
    border: 1px solid #001220;
}

.location-detailed-info {
    padding-right: 50px;
}

.location-detailed-info p {
    margin: 5px 0px;
}

.location-detailed-info p:first-of-type {
    font-size: 18px;
    margin-bottom: 20px;
}

.location-detailed-info p:last-of-type {
    margin-bottom: 30px;
}

/* Organization */

.organization-container {
    color: black;
    background: #fafafa;
    font-family: 'DecimaLight';
    height: 100vh;
}

.organization-container .container:first-of-type {
    padding-top: 80px;

}

.organization-title {
    color: #1399D6;
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 1px;
    width: 100%;

}

.organization-container .organization-title-container {
    text-align: center;
}

.organization-container .p {

    vertical-align: center;
    height: 100%;

}

.departments .col-sm-2{
    margin-top: 20px;
}

.departments a {
    text-decoration: none !important;
    color: black;
    font-weight: bold;
    border: 5px solid transparent;
    font-size: 1.1em;
}

.departments a:not(.active):hover {

    font-style: italic;
}


.departments a.active {
    border-bottom: 5px solid #1399D6;
    transition: border-bottom-color 0.7s;

}

.department {
    margin-top: 20px;
}

.department .teammate-figure > img {
    border-radius: 75px;
    border: 4px solid #1399D6;
}

.teammate-figure .teammate-name {
    font-weight: bold;
    font-size: 19px;
    color: black;
}

.teammate-figure .teammate-role {
    margin-top: -10px;
    font-style: oblique;
    font-size: 16px;
}

.teammate-name{
	margin-bottom: 8px;
}

.department{
display:none;

}

.department.active{
display: flex;
}

